[package]
name = "torch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { version = "0.13", features = ['download-libtorch'] }
anyhow = "1.0"
rand = "0.8"

[[bin]]
name = "translation"
path = "src/bins/translation.rs"